created webconfig and fixed webclient errors